--- a/package.json
+++ b/package.json
@@ -19,5 +19,12 @@
   "bugs": {
     "url": "https://github.com/bahmutov/cypress-slack-notify/issues"
   },
-  "homepage": "https://github.com/bahmutov/cypress-slack-notify#readme"
+  "homepage": "https://github.com/bahmutov/cypress-slack-notify#readme",
+  "devDependencies": {
+    "cypress": "^10.8.0",
+    "prettier": "^2.7.1"
+  },
+  "dependencies": {
+    "@slack/web-api": "^6.7.2"
+  }
 }
