--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "cypress-slack-notify",
   "version": "1.0.0",
   "description": "Post messages in Slack channels when specific Cypress tests and specs fail",
-  "main": "index.js",
+  "main": "src/index.js",
+  "files": [
+    "src"
+  ],
   "scripts": {
     "test": "cypress run"
   },
@@ -25,6 +28,7 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
-    "@slack/web-api": "^6.7.2"
+    "@slack/web-api": "^6.7.2",
+    "debug": "^4.3.4"
   }
 }
