--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "src"
   ],
   "scripts": {
-    "test": "cypress run"
+    "test": "cypress run",
+    "badges": "npx -p dependency-version-badge update-badge cypress"
   },
   "repository": {
     "type": "git",
