--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cypress-slack-notify",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "Post messages in Slack channels when specific Cypress tests and specs fail",
   "main": "src/index.js",
   "files": [
@@ -8,11 +8,12 @@
   ],
   "scripts": {
     "test": "cypress run",
-    "badges": "npx -p dependency-version-badge update-badge cypress"
+    "badges": "npx -p dependency-version-badge update-badge cypress",
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bahmutov/cypress-slack-notify.git"
+    "url": "https://github.com/bahmutov/cypress-slack-notify.git"
   },
   "keywords": [
     "cypress-plugin",
@@ -26,7 +27,8 @@
   "homepage": "https://github.com/bahmutov/cypress-slack-notify#readme",
   "devDependencies": {
     "cypress": "^10.8.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "semantic-release": "^19.0.5"
   },
   "dependencies": {
     "@slack/web-api": "^6.7.2",
