--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
       - name: Run Cypress tests 🧪
         # https://github.com/cypress-io/github-action
         uses: cypress-io/github-action@v4
+        with:
+          command: npx cypress-expect run --expect-exactly cypress/expected.json
 
   release:
     needs: [test]
