--- a/.github/workflows/ci.multiple.yml
+++ b/.github/workflows/ci.multiple.yml
@@ -18,3 +18,6 @@ jobs:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
           DEBUG: cypress-slack-notify
+
+      - name: Print JSON log 🖨
+        run: cat cypress-slack-notified.json
