feat: print json log option (#14)
* feat: write json log if needed

* print the json log on CI

* add run url and tags

* add ci test log

* update the ci test

* add checking ci multiple logs

--- a/.github/workflows/ci.multiple.yml
+++ b/.github/workflows/ci.multiple.yml
@@ -18,3 +18,9 @@ jobs:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
           DEBUG: cypress-slack-notify
+
+      - name: Print JSON log 🖨
+        run: cat cypress-slack-notified.json
+
+      - name: Check JSON log ✅
+        run: node ./test-logs/ci.multiple.js
