--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,12 @@ jobs:
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
           DEBUG: cypress-slack-notify
 
+      - name: Print JSON log 🖨
+        run: cat cypress-slack-notified.json
+
+      - name: Check JSON log ✅
+        run: node ./test-logs/ci.js
+
   release:
     needs: [test]
     runs-on: ubuntu-20.04
