--- a/.github/workflows/ci.combined.yml
+++ b/.github/workflows/ci.combined.yml
@@ -14,7 +14,7 @@ jobs:
           command: |
             npx cypress-expect run --config-file cypress.combined.config.js \
               --spec cypress/e2e/spec-b.cy.js \
-              --record --tag sanity,effective --expect-exactly cypress/expected.json
+              --record --tag sanity,effective --expect-exactly cypress/spec-b-expected.json
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           SLACK_TOKEN: ${{ secrets.SLACK_TOKEN }}
