--- a/.github/workflows/ci.multiple.yml
+++ b/.github/workflows/ci.multiple.yml
@@ -2,14 +2,14 @@ name: ci-multiple
 on: push
 jobs:
   test:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎
-        uses: actions/checkout@v3
+        uses: actions/checkout@v5
 
       - name: Run Cypress tests 🧪
         # https://github.com/cypress-io/github-action
-        uses: cypress-io/github-action@v5
+        uses: cypress-io/github-action@v6
         with:
           command: |
             npx cypress-expect run --config-file cypress.multiple.config.js \
