--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
   "dependencies": {
     "@slack/web-api": "^7.11.0",
     "arg": "^5.0.2",
-    "debug": "^4.4.3",
+    "debug": "4.4.3",
     "find-test-names": "1.29.19",
     "minimatch": "^5.1.0"
   }
